# pr-livro-loja

./: .dockerignore  .env.development.local  .gitignore  Dockerfile  conftest.py  db.sqlite3  docker-compose.yml  env.dev  heroku.yml  manage.py  pyproject.toml  pytest.ini  readme.md  requirements.txt  requisitos.txt  vercel.json  vercel.yml
.github/workflows/: build.yml  github-action-demo.yml  vercel-deploy.yml  workflow-pr.yml
api/: tests.py
ordem/: admin.py  apps.py  fabricas.py  urls.py
ordem/migrations/: 0001_initial.py
ordem/modelos/: __init__.py  ordem.py
ordem/serializadores/: __init__.py  ordem_serial.py
ordem/testes/: __init__.py
ordem/testes/modelos/: __init__.py  teste_ordem.py
ordem/testes/seriais/: teste_ordem_serial.py
ordem/tests/modelos/: teste_ordem.py
ordem/tests/seriais/: teste_ordem_serial.py
ordem/tests/viewsets/: __init__.py  teste_ordem_viewset.py
ordem/viewset/: __init__.py  ordem_viewset.py
prlivroloja/: asgi.py  settings.py  urls.py  views.py  wsgi.py
prlivroloja/templates/: hello_world.html
produto/: admin.py  fabricas.py  urls.py
produto/migrations/: 0001_initial.py
produto/modelos/: __init__.py  categoria.py  produto.py
produto/serializadores/: __init__.py  categoria_serial.py  produto_serial.py
produto/testes/: __init__.py
produto/testes/modelos/: __init__.py  teste_categoria.py  teste_produto.py
produto/testes/seriais/: teste_categoria_serial.py  teste_produto_serial.py
produto/tests/modelos/: teste_categoria.py  (+1 more)
produto/viewset/: __init__.py  categoria_viewset.py  produto_viewset.py
(+4 files in other folders)
