[tool.poetry]
name = "prlivroloja"
version = "0.1.0"
description = ""
authors = ["redssy <redlemagic@hotmail.com>"]
readme = ""

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.13"
pytest = ">=8.3.5,<9.0.0"
factory-boy = ">=3.3.3,<4.0.0"
django = ">=5.1.7,<6.0.0"
djangorestframework = ">=3.15.2,<4.0.0"
faker = ">=37.0.2,<38.0.0"
pytest-django = ">=4.10.0,<5.0.0"
django-extensions = ">=3.2.3,<4.0.0"
django-debug-toolbar = ">=5.1.0,<6.0.0"
psycopg2-binary = "^2.9.10"
flake8 = "^7.2.0"
black = "^25.1.0"
whitenoise = "^6.9.0"
gunicorn = "^23.0.0"
dj-database-url = "^2.3.0"
gitpython = "^3.1.44"
